--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 </head>
 <body>
-    <!---- hero Setion start---->
+    
+<!---- hero Setion start---->
 
     <div class="hero">
         <nav>
@@ -33,6 +34,41 @@
             <a href="#" class="btn">Daftar/Login</a>
         </nav>
 
+<!-- Slideshow container -->
+<div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+
+      <img src="1.jpg" style="width:75%">
+
+    </div>
+  
+    <div class="mySlides fade">
+
+      <img src="2.jpg" style="width:75%">
+
+    </div>
+  
+    <div class="mySlides fade">
+
+      <img src="3.jpg" style="width:75%">
+
+    </div>
+  
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+  
+  <!-- The dots/circles -->
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+
         <div class="content">
             <h4>Selamat Datang</h4>
             <h1>Urus Pajak, Lebih Mudah Dengan</h1>
@@ -44,11 +80,11 @@
                 </form>
             </div>
         </div>
-        <div>
-
-        </div>
 
     </div>
+
+
+
 </body>
 </html>
 
@@ -59,6 +95,7 @@
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
 }
+
 .hero{
     height: 100vh;
     width: 100%;
@@ -66,6 +103,9 @@
     background-size: cover;
     background-position: center;
 }
+
+
+
 nav{
     display: flex;
     align-items: center;
@@ -111,7 +151,7 @@ nav u1 li a:hover{
 }
 .btn{
     background-color: rgb(231, 180, 12);
-    color: blue;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     border: 2px solid transparent;
     font-weight: bold;
@@ -124,7 +164,7 @@ nav u1 li a:hover{
 }
 .content{
     position: absolute;
-    top: 50%;
+    top: 35%;
     left: 5%;
     transform: translateY(-50%);
 }
@@ -172,7 +212,133 @@ h4{
     cursor: pointer;
 }
 
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 100%;
+  position:center;
+  margin: auto;
+  padding-top: 450px;
+    padding-left: 21%;
+    padding-right: 1%;
+    border-radius: 30px;
+    
+}
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: center;
+  top: 10%;
+  width: auto;
+  margin-top: 50px;
+  padding: 14px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 5;
+  border-radius: 10px 0 0 10px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(170, 129, 17, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #dbac12;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #c0bebe;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+
+
 </style>
+
+<script>
+let slideIndex = 1;
+showSlides(slideIndex);
+
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+}
+
+</script>
 
 
 
